--- a/src/vallas/mv-15008.html
+++ b/src/vallas/mv-15008.html
@@ -68,7 +68,7 @@
         <div class="container">
   
           <div class="d-flex justify-content-between align-items-center">
-            <h2 class="fw-bold tx-blanco">MV - 15007</h2>
+            <h2 class="fw-bold tx-blanco">MV - 15008</h2>
             <ol class="tx-blanco">
               <li><a href="index.html" class="tx-blanco">Inicio</a></li>
               <li>Vallas</li>
@@ -85,16 +85,16 @@
           <div class="row align-items-center">
             <div class="col-md-6">
               <div class="valla-info">
-                <h2 class="tx-blanco mb-0 ">Valla Publicitaria MV-15007</h2>
-                <p class="tx-verde"><strong>Estado:</strong> Disponible <i class="fa fa-check-circle"></i></p>
+                <h2 class="tx-blanco mb-0 ">Valla Publicitaria MV-15008</h2>
+                <p class="text-danger"><strong>Estado:</strong> No Disponible <i class="fa fa-times-circle"></i></p>
                 <div class="card gris">
                     <ul class="list-group list-group-flush">
                       <li class="list-group-item gris tx-blanco"><strong>Tipo:</strong> Valla Publicitaria</li>
-                      <li class="list-group-item gris tx-blanco"><strong>Código:</strong> MV-15007</li>
-                      <li class="list-group-item gris tx-blanco"><strong>Dirección:</strong> Autopista norte con Avenida 20</li>
-                      <li class="list-group-item gris tx-blanco"><strong>Ubicación de referencia:</strong> Visual SUR – NORTE vía Copacabana</li>
+                      <li class="list-group-item gris tx-blanco"><strong>Código:</strong> MV-15008</li>
+                      <li class="list-group-item gris tx-blanco"><strong>Dirección:</strong> Autopista norte con Avenida 10</li>
+                      <li class="list-group-item gris tx-blanco"><strong>Ubicación de referencia:</strong> Al frente de Jardines de la Fe, visual SUR - NORTE</li>
                       <li class="list-group-item gris tx-blanco"><strong>Municipio:</strong> Bello, Antioquia</li>
-                      <li class="list-group-item gris tx-blanco"><strong>Medidas:</strong> 12 x 4 metros</li>
+                      <li class="list-group-item gris tx-blanco"><strong>Medidas:</strong> 4 X 7 metros</li>
 
                       <a name="" id="" class="btn btn-primary fw-bold tx-oscuro" href="#" role="button">Contactanos</a>
                     </ul>
