--- a/src/productos.html
+++ b/src/productos.html
@@ -65,66 +65,99 @@
 
     <!--Header Titulo-->
     <section class="breadcrumbs verde">
-      <div class="container">
-
-        <div class="d-flex justify-content-between align-items-center">
-          <h2 class="fw-bold tx-blanco">Contacto</h2>
-          <ol class="tx-blanco">
-            <li><a href="index.html" class="tx-blanco">Inicio</a></li>
-            <li>Contacto</li>
-          </ol>
+        <div class="container">
+  
+          <div class="d-flex justify-content-between align-items-center">
+            <h2 class="fw-bold tx-blanco">Productos</h2>
+            <ol class="tx-blanco">
+              <li><a href="index.html" class="tx-blanco">Inicio</a></li>
+              <li>Productos</li>
+            </ol>
+          </div>
+  
         </div>
-
-      </div>
     </section>
     <!--Fin Header Titulo-->
 
-    <!--Section Contáctame-->
-    <section class="negro contenedor" id="contact">
-      <div class="container">
-        <div class="row justify-content-center align-items-center">
-          <div class="col-lg-8">
-            <!--Titulo-->
-            <div class="section-title">
-              <h1 class="fw-bold text-center mb-2 mt-3 tx-blanco fs-1">
-                ¡Hablemos!
-              </h1>
-              <p class="tx-blanco text-center">Si estás interesado en nuestros servicios o tienes alguna inquietud, no dudes en contactarnos.</p>
+    <!-- Header Cards Prodcutos -->
+    <header class="mt-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <div class="card gris tx-blanco">
+                        <img src="https://via.placeholder.com/500x300.png?text=Producto+1" class="card-img-top" alt="Producto 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Producto 1</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut magna vel mauris interdum auctor.</p>
+                            <p class="card-text"><strong>Precio: $100</strong></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <div class="card gris tx-blanco">
+                        <img src="https://via.placeholder.com/500x300.png?text=Producto+1" class="card-img-top" alt="Producto 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Producto 1</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut magna vel mauris interdum auctor.</p>
+                            <p class="card-text"><strong>Precio: $100</strong></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <div class="card gris tx-blanco">
+                        <img src="https://via.placeholder.com/500x300.png?text=Producto+1" class="card-img-top" alt="Producto 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Producto 1</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut magna vel mauris interdum auctor.</p>
+                            <p class="card-text"><strong>Precio: $100</strong></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <div class="card gris tx-blanco">
+                        <img src="https://via.placeholder.com/500x300.png?text=Producto+1" class="card-img-top" alt="Producto 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Producto 1</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut magna vel mauris interdum auctor.</p>
+                            <p class="card-text"><strong>Precio: $100</strong></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <div class="card gris tx-blanco">
+                        <img src="https://via.placeholder.com/500x300.png?text=Producto+1" class="card-img-top" alt="Producto 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Producto 1</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut magna vel mauris interdum auctor.</p>
+                            <p class="card-text"><strong>Precio: $100</strong></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <div class="card gris tx-blanco">
+                        <img src="https://via.placeholder.com/500x300.png?text=Producto+1" class="card-img-top" alt="Producto 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Producto 1</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut magna vel mauris interdum auctor.</p>
+                            <p class="card-text"><strong>Precio: $100</strong></p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <!-- Fin Titulo-->
-          </div>
         </div>
-        <form action="forms/contact.php" method="post" role="form" class="php-email-form gris p-3 rounded-2">
-          <div class="row">
-            <div class="col-md-6 form-group">
-              <input type="text" name="name" class="form-control" id="name" placeholder="Tu Nombre" required>
-            </div>
-            <div class="col-md-6 form-group mt-3 mt-md-0">
-              <input type="email" class="form-control" name="email" id="email" placeholder="Tu Email" required>
-            </div>
-          </div>
-          <div class="form-group mt-3">
-            <input type="text" class="form-control" name="subject" id="subject" placeholder="Asunto" required>
-          </div>
-          <div class="form-group mt-3">
-            <textarea class="form-control" name="message" rows="5" placeholder="Mensaje" required></textarea>
-          </div>
-          <div class="my-3">
-            <div class="loading">Loading</div>
-            <div class="error-message"></div>
-            <div class="sent-message">Your message has been sent. Thank you!</div>
-          </div>
-          <div class="text-center"><button type="submit" class="btn btn-primary">Enviar Mensaje</button></div>
-        </form>
-      </div>
-    </section>
-    <!--Fin Section Contáctame-->
+    </header>
+    <!-- Fin Header Cards Prodcutos -->
 
     <!--Linea-->
     <div class="container">
-      <hr>
+        <hr>
     </div>
-     <!--Linea-->
+    <!--Linea-->
 
     <!-- Footer -->
     <footer class="negro text-white">
@@ -156,10 +189,10 @@
       </div>
     </footer>        
     <!-- Fin Footer -->
-
+    
     <!-- Boton Whathsapp -->
     <a href="https://wa.me/tunumero" class="btn btn-whatsapp btn-primary" target="_blank">
-      <p class="m-0"><i class="fab fa-whatsapp"></i> Chatea con nosotros</p>
+       <p class="m-0"><i class="fab fa-whatsapp"></i> Chatea con nosotros</p>
     </a> 
     <!-- Fin Boton Whathsapp -->
 
